--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@svgr/rollup": "^8.1.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
@@ -29,11 +31,15 @@
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "eslint-plugin-stylistic": "^0.0.0-0",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.9",
-    "typescript": "^5.2.2",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.1.0",
     "vite": "^5.3.1"
   }
 }
